[package]
name = "prereq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
edition = "2018"
name = "prepreq"
path = "src/main.rs"

[dependencies]
regex = "1.8.3"
lazy_static = "1.4.0"
libc = "0.2.144"
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"
const_format = "0.2.31"
thiserror = "1.0.40"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*